@@ -51,7 +51,7 @@ public class AnnouncementsUtil {
 
 		// General announcements
 
-		scopes.put(new Long(0), new long[] {0});
+		scopes.put(Long.valueOf(0), new long[] {0});
 
 		// Personal announcements
 
