@@ -37,8 +37,8 @@ public class MessageThreadComparator
 
 	@Override
 	public int compare(MBMessage msg1, MBMessage msg2) {
-		Long parentMessageId1 = new Long(msg1.getParentMessageId());
-		Long parentMessageId2 = new Long(msg2.getParentMessageId());
+		Long parentMessageId1 = Long.valueOf(msg1.getParentMessageId());
+		Long parentMessageId2 = Long.valueOf(msg2.getParentMessageId());
 
 		int value = parentMessageId1.compareTo(parentMessageId2);
 
@@ -48,8 +48,8 @@ public class MessageThreadComparator
 		}
 
 		if (value == 0) {
-			Long messageId1 = new Long(msg1.getMessageId());
-			Long messageId2 = new Long(msg2.getMessageId());
+			Long messageId1 = Long.valueOf(msg1.getMessageId());
+			Long messageId2 = Long.valueOf(msg2.getMessageId());
 
 			value = messageId1.compareTo(messageId2);
 		}
