@@ -136,10 +136,10 @@ public class LanguageTag extends IncludeTag {
 			Integer count = counts.get(locale.getLanguage());
 
 			if (count == null) {
-				count = new Integer(1);
+				count = Integer.valueOf(1);
 			}
 			else {
-				count = new Integer(count.intValue() + 1);
+				count = Integer.valueOf(count.intValue() + 1);
 			}
 
 			counts.put(locale.getLanguage(), count);
